k8s/infrastructure/kong-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
  - host: kong.example
    http:
      paths:
      - path: /gateway
        pathType: Prefix 
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
      - path: /cart
        pathType: Prefix 
        backend:
          service:
            name: cart-service
            port:
              number: 8080
      - path: /order-service
        pathType: Prefix 
        backend:
          service:
            name: order-service
            port:
              number: 8080
      - path: /product-service
        pathType: Prefix 
        backend:
          service:
            name: product-service
            port:
              number: 8080
      - path: /discovery-server
        pathType: Prefix 
        backend:
          service:
            name: discovery-server
            port:
              number: 8080 
      - path: /keycloak
        pathType: Prefix 
        backend:
          service:
            name: keycloak
            port:
              number: 8080      
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: keycloak
# spec:
#   tls:
#     - hosts:
#       - keycloak.192.168.49.2.nip.io
#   rules:
#   - host: keycloak.192.168.49.2.nip.io
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: keycloak
#             port:
#               number: 8080
